--- a/GameClient/GameClient.csproj
+++ b/GameClient/GameClient.csproj
@@ -7,4 +7,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.6.24327.7" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0-preview.6.24327.7" />
+      <PackageReference Include="Microsoft.Orleans.Client" Version="8.2.0-preview1" />
+    </ItemGroup>
+
 </Project>
