--- a/GameServerr/GameServerr.csproj
+++ b/GameServerr/GameServerr.csproj
@@ -10,7 +10,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.6.24327.7" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0-preview.6.24327.7" />
-      <PackageReference Include="Microsoft.Orleans.Client" Version="8.2.0-preview1" />
+      <PackageReference Include="Microsoft.Orleans.Server" Version="8.2.0-preview1" />
     </ItemGroup>
 
 </Project>
